# council-of-elders

./: .gitignore  ARCHITECTURE.html  BIBLIOGRAPHY.html  CLAUDE.md  LICENSE  README.md  TRANSCRIPT_REVIEW.html  activate.sh  chat.py  debate.py  pyproject.toml  setup_knowledge.py  start  start-debate  wise
council/: __init__.py  cli.py  config.py  debate_engine.py  history.py  journals.py  llm.py  nomination.py  orchestrator.py  podcast.py  profile.py  refinement_engine.py  smart_refinement.py  tasks.py
council/elders/: __init__.py  base.py  custom.py
council/elders/profiles/: __init__.py  adam_smith.py  aristotle.py  ashoka.py  aurelius.py  bacon.py  boudicca.py  branden.py  bruce_lee.py  buddha.py  buffett.py  clear.py  cleopatra.py  confucius.py  curie.py  darwin.py  davinci.py  dogen.py  douglass.py  epicurus.py  franklin.py  genghis.py  graham.py  greene.py  hannibal.py  hildegard.py  hippocrates.py  hypatia.py  ibn_khaldun.py  jung.py  kabatzinn.py  kahneman.py  khayyam.py  (+27 more)
council/formats/: full_council.py  html_formatter.py
council/knowledge/: __init__.py  audit.py  biography.py  books.py  buffett_letters.py  deep_audit.py  documentaries.py  enrichment.py  fetcher.py  kindle.py  memorabilia.py  podcasts.py  review_transcripts.py  source_material.py  sources.py  store.py  verify_quotes.py  youtube.py  youtube_agents.py
council/tts/: __init__.py  base.py  elevenlabs.py  macos.py  voices.py
council/ui/: __init__.py  panels.py
council/web/: __init__.py  app.py
desktop/: forge.config.js  package-lock.json  package.json
docs/: KINDLE_EXTRACTION.md  PAID_RESOURCES.md  REMAINING_SOURCES.md  SOURCE_MAP.md
scripts/: download_avatars.py  extract_prompts.py  kindle_auto_extract.scpt  kindle_extract.py
tests/: test_affiliate_urls.py  test_config.py  test_discovery_parsing.py  test_elder_registry.py  test_profile.py  test_smart_refinement.py  test_voices.py
(+31 files in other folders)
